--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "mongoose": "^8.16.4",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "svix": "^1.69.0"
   }
 }
