--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       - CLIENT_URL=http://localhost:3000
       - FASTAPI_URL=http://fastapi:8000
       - NODE_ENV=development
+    env_file:
+      - ./server/.env
     depends_on:
       - fastapi
 
@@ -15,6 +17,8 @@ services:
     build: ./fastapi_server
     ports:
       - "8000:8000"
+    env_file:
+      - ./fastapi_server/.env
 
   frontend:
     build: ./client
@@ -22,3 +26,5 @@ services:
       - "3000:3000"
     environment:
       - VITE_API_URL=http://localhost:5000
+    env_file:
+      - ./client/.env
