--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,8 +1,20 @@
 FROM node:18-alpine
+
 WORKDIR /app
+
+# Copy env file explicitly
+COPY .env ./
+
+# Copy only package files and install dependencies
 COPY package*.json ./
 RUN npm install
+
+# Copy the rest of the project files
 COPY . .
+
+# Build the app (VITE_* env vars must exist here)
 RUN npm run build
+
+# Use Vite preview server to serve the app
 EXPOSE 3000
 CMD ["npm", "run", "preview"]
