--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,7 +1,17 @@
 FROM node:18-alpine
+
+# Set working directory
 WORKDIR /app
+
+# Copy package files and install dependencies
 COPY package*.json ./
-RUN npm install
+RUN npm install --production
+
+# Copy the rest of the application code
 COPY . .
+
+# Expose the port your app runs on
 EXPOSE 5000
+
+# Start the server
 CMD ["node", "server.js"]
