--- a/client/.env
+++ b/client/.env
@@ -1,6 +1,6 @@
 # VITE_API_URL=http://localhost:5000
 
 
-VITE_API_URL=https://backend-4zj4.onrender.com
+VITE_API_URL=https://prodexa-ai-1.onrender.com
 
 
